force-app/main/default/objects/ACIS_Visit__c/ACIS_Visit__c.object-meta.xml
<CustomObject>
    <label>ACIS Visit</label>
    <nameField>
        <label>Visit #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ACIS Visits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>