force-app/main/default/objects/ACIS_Visit__c/fields/Animal__c.field-meta.xml
<CustomField>
    <fullName>Animal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Animal</label>
    <referenceTo>Animal__c</referenceTo>
    <relationshipLabel>ACIS Visits</relationshipLabel>
    <relationshipName>ACIS_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>