force-app/main/default/objects/ACIS_Visit__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>ACIS Visits</relationshipLabel>
    <relationshipName>ACIS_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>