force-app/main/default/objects/ACIS_Visit__c/fields/Detective_Name__c.field-meta.xml
<CustomField>
    <fullName>Detective_Name__c</fullName>
    <label>Detective Name</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Det. Cadiz</fullName>
            </value>
            <value>
                <fullName>Det. Connors</fullName>
            </value>
            <value>
                <fullName>Det. Cuccias</fullName>
            </value>
            <value>
                <fullName>Det. Fitzsimons</fullName>
            </value>
            <value>
                <fullName>Det. Hernandez</fullName>
            </value>
            <value>
                <fullName>Det. Salvitti</fullName>
            </value>
            <value>
                <fullName>Det. Ward</fullName>
            </value>
            <value>
                <fullName>Det. Yasin</fullName>
            </value>
            <value>
                <fullName>Lt. Ashby</fullName>
            </value>
            <value>
                <fullName>P.O. Cespedes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>