force-app/main/default/objects/ACIS_Visit__c/fields/Medical_Status_at_visit__c.field-meta.xml
<CustomField>
    <fullName>Medical_Status_at_visit__c</fullName>
    <label>Medical Status at visit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Healthy</fullName>
            </value>
            <value>
                <fullName>Medically compromised</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>