force-app/main/default/objects/ACIS_Visit__c/fields/Spoke_w_ARC_Vet__c.field-meta.xml
<CustomField>
    <fullName>Spoke_w_ARC_Vet__c</fullName>
    <label>Spoke w/ ARC Vet</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>