force-app/main/default/objects/ACIS_Visit__c/fields/Visit_Occurred__c.field-meta.xml
<CustomField>
    <fullName>Visit_Occurred__c</fullName>
    <label>Visit Occurred</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>